# gsheet-mcp

./: .env-example  .gitignore  LICENSE  README.md  deploy.md  main.py  pyproject.toml  server.py  test_server.py
